[gd_scene load_steps=4 format=3 uid="uid://c3gyr5tdbt42v"]

[ext_resource type="Script" path="res://scripts/option_menu.gd" id="1_gyt70"]
[ext_resource type="Texture2D" uid="uid://eyt82ommxp7x" path="res://assets/background/Background.jpg" id="2_40x84"]
[ext_resource type="FontFile" uid="uid://pattneh8lhsf" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_hj3dt"]

[node name="Option_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gyt70")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -230.0
offset_right = 1919.0
offset_bottom = 203.0
grow_vertical = 2
texture = ExtResource("2_40x84")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 32
theme_override_fonts/font = ExtResource("3_hj3dt")
theme_override_font_sizes/font_size = 48
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hj3dt")
theme_override_font_sizes/font_size = 32
text = "Master Volume"

[node name="Master" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
max_value = 50.0
rounded = true

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hj3dt")
theme_override_font_sizes/font_size = 32
text = "Music Volume"

[node name="Music" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
max_value = 50.0
rounded = true

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hj3dt")
theme_override_font_sizes/font_size = 32
text = "Mute"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3

[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
